[gd_scene load_steps=7 format=3 uid="uid://upshpeaseq4e"]

[ext_resource type="Script" path="res://Scripts/UI scripts/win_window.gd" id="1_4wfh4"]
[ext_resource type="Texture2D" uid="uid://bb3cwv6swlqnc" path="res://assets/sprites/UI/screen.png" id="1_pqsg7"]
[ext_resource type="FontFile" uid="uid://dm4canr8av6iq" path="res://assets/fonts/Mario-Kart-DS.ttf" id="3_12pro"]

[sub_resource type="Animation" id="Animation_eomm2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -1000)]
}

[sub_resource type="Animation" id="Animation_mt414"]
resource_name = "fall down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.406126, 0.435275),
"update": 0,
"values": [Vector2(0, -1000), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w6a3r"]
_data = {
"RESET": SubResource("Animation_eomm2"),
"fall down": SubResource("Animation_mt414")
}

[node name="Win window" type="Node2D"]
position = Vector2(0, -87.5977)
script = ExtResource("1_4wfh4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_top = -1000.0
offset_bottom = -1000.0

[node name="Sprite2D" type="Sprite2D" parent="Control"]
scale = Vector2(7, 7)
texture = ExtResource("1_pqsg7")

[node name="Next level" type="Button" parent="Control"]
modulate = Color(0, 1, 0, 1)
layout_mode = 0
offset_left = -147.0
offset_top = -18.0
offset_right = 476.0
offset_bottom = 138.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
text = "Next  Border"

[node name="retry" type="Button" parent="Control"]
modulate = Color(0, 0, 1, 1)
layout_mode = 0
offset_left = -354.0
offset_top = 68.0
offset_right = 188.0
offset_bottom = 224.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
text = "Retry"

[node name="quit" type="Button" parent="Control"]
modulate = Color(1, 0, 0, 1)
layout_mode = 0
offset_left = 67.0
offset_top = 72.0
offset_right = 716.0
offset_bottom = 228.0
scale = Vector2(0.5, 0.5)
theme_override_font_sizes/font_size = 100
text = "Quit to menu
"

[node name="Label" type="Label" parent="Control"]
layout_mode = 0
offset_left = -354.0
offset_top = -183.0
offset_right = 499.0
offset_bottom = -16.0
scale = Vector2(0.9, 0.9)
theme_override_fonts/font = ExtResource("3_12pro")
theme_override_font_sizes/font_size = 100
text = "You have crossed 
the border"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w6a3r")
}

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Control/Next level" to="." method="_on_next_level_pressed"]
[connection signal="pressed" from="Control/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="Control/quit" to="." method="_on_quit_pressed"]
